<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/theme_color"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Guides"
            android:textColor="@color/white"
            android:textSize="23dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearResetView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_reset" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".20"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/guideslist_reset_view"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/guides_reset_view"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearInformation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".20"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/guideslist_information"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtInforamtion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/guides_information_button"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearRotateView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_rotate_view" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".20"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/guideslist_rotate_view"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtRotate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/guides_rotate_view"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearDragObject"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_drag_object" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".20"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/guideslist_drag_object"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtDragObject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/guides_drag_object"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="gone" />

        <!--<LinearLayout-->
        <!--android:id="@+id/linearRandomizeList"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:src="@drawable/ic_random" />-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight=".20"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingLeft="30dp"-->
        <!--android:text="Randomize Button"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textStyle="bold" />-->

        <!--</LinearLayout>-->

        <!--<TextView-->
        <!--android:id="@+id/txtRandomize"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="10dp"-->
        <!--android:text="You can reset the assembled parts of the ship using this button."-->
        <!--android:textAlignment="center"-->
        <!--android:textStyle="italic"-->
        <!--android:visibility="gone" />-->

        <!--<LinearLayout-->
        <!--android:id="@+id/linearNormalList"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:src="@drawable/ic_notrandom" />-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight=".20"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingLeft="30dp"-->
        <!--android:text="Normal Button"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textStyle="bold" />-->

        <!--</LinearLayout>-->

        <!--<TextView-->
        <!--android:id="@+id/txtNormalList"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="10dp"-->
        <!--android:text="You can reset the assembled parts of the ship using this button."-->
        <!--android:textAlignment="center"-->
        <!--android:textStyle="italic"-->
        <!--android:visibility="gone" />-->
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="You can reset the assembled parts of the ship using this"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="italic" />

</LinearLayout>